third_party/move/move-compiler-v2/tests/uninit-use-checker/borrow_if_unfoldable.move
script {
fun main(p: bool) {
    let x = 5;
    let ref;
    if (p) {
        ref = &x;
    };
    assert!(*move ref == 5, 42);
}
}

// check: MOVELOC_UNAVAILABLE_ERROR
